<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.pingidentity.opendst</groupId>
  <artifactId>opendst</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>OpenDST Parent</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <main.basedir>${project.basedir}</main.basedir>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
          <configuration>
            <source>25</source>
            <target>25</target>
            <release>25</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>3.1.0</version>
          <configuration>
            <ratchetFrom>origin/main</ratchetFrom>
            <formats>
              <format>
                <includes>
                  <include>.gitattributes</include>
                  <include>.gitignore</include>
                </includes>
                <trimTrailingWhitespace />
                <endWithNewline />
                <indent>
                  <tabs>true</tabs>
                  <spacesPerTab>4</spacesPerTab>
                </indent>
              </format>
            </formats>
            <java>
              <palantirJavaFormat>
                <version>2.85.0</version>
                <style>PALANTIR</style>
                <formatJavadoc>false</formatJavadoc>
              </palantirJavaFormat>
              <licenseHeader>
                <file>${main.basedir}/license-header</file>
              </licenseHeader>
            </java>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>opendst-simulator</module>
    <module>opendst-testapp</module>
    <module>opendst-testapp-dst</module>
  </modules>
</project>
